reverted - IDEA-205954 [Boot JDK11] When staring IDEA from terminal - warnings are shown "OpenJDK 64-Bit Server VM warning: Option UseConcMarkSweepGC was deprecated"
GitOrigin-RevId: 8f229d6c022a63c76626b69c0177fdc4f1f07610